Moved yml files used for internal stuff into an internals folder.
Moved attribute-modifier-ability-config.yml and cooldown-config.yml data to the ability-config.yml for simplicity

Upgraded config.yml updating and storage methods.

Added translations.yml and removed unused/obsolete files.